# tg-rag

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
nbs/: index.ipynb  parse.ipynb
tg_rag/: bot.py  config.py  data_extraction.py  embedding.py  llm.py  rag.py  search.py  state_machine.py  upload.py  utils.py
tg_rag/database/: __init__.py  basic.py  elastic.py  qdrant.py
tg_rag/filters/: file_filter.py
tg_rag/preprocess/: __init__.py  data_extraction.py  text_parsing.py
tg_rag/search/: elastic.py  text.py  vector.py
